# music-visualizer-sfml

./: App.cpp  App.h  Bar.h  CMakeLists.txt  FFTStream.cpp  FFTStream.h  README.md  Utils.h  example.pro  imconfig.h  imgui.ini  imgui_draw.cpp  main.cpp
ImGUI/: CMakeLists.txt
ImGUI/include/: imgui.h  imgui_internal.h  imstb_textedit.h
ImGUI/src/: imgui-SFML.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
ImPlot/: CMakeLists.txt
include/: App.h  Bar.h  FFTStream.h  Spectrogram.h  Utils.h  imfilebrowser.h
src/: App.cpp  Bar.cpp  FFTStream.cpp  Spectrogram.cpp  main.cpp
